[package]
name = "pact_matching"
version = "1.2.2"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Pact-Rust support library that implements request and response matching logic"
documentation = "https://docs.rs/pact_matching/"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_matching"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart"]
datetime = ["pact_models/datetime", "pact-plugin-driver?/datetime", "dep:chrono"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact-plugin-driver?/xml", "dep:sxd-document"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver"]
multipart = ["dep:multer"] # suport for MIME multipart bodies

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.82"
base64 = "0.22.0"
bytes = { version = "1.6.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["std", "clock"], default_features = false, optional = true }
difference = "2.0.0"
futures = "0.3.30"
hex = "0.4.3"
http = "1.1.0"
itertools = "0.12.1"
lazy_static = "1.4.0"
lenient_semver = "0.4.2"
maplit = "1.0.2"
md5 = "0.7.0"
mime = "0.3.17"
multer = { version = "3.0.0", features = ["all"], optional = true }
nom = "7.1.3"
onig = { version = "6.4.0", default-features = false }
pact_models = { version = "~1.2.0", default-features = false }
pact-plugin-driver = { version = "~0.6.1", optional = true, default-features = false }
rand = "0.8.5"
reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls-native-roots", "json"] }
semver = "1.0.22"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_urlencoded = "0.7.1"
sxd-document = { version = "0.3.2", optional = true }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
tree_magic_mini = "3.1.4"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
quickcheck = "1"
expectest = "0.12.0"
env_logger = "0.11.3"
hamcrest2 = "0.3.0"
test-log = { version = "0.2.15", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log", "fmt"] }
ntest = "0.9.0"
pretty_assertions = "1.4.0"
rstest = "0.19.0"
