[package]
name = "pact_matching_ffi"
version = "0.0.5"
authors = ["Andrew Lilley Brinker <abrinker@mitre.org>", "Caleb Stepanian <cstepanian@mitre.org>"]
edition = "2018"
description = "Pact matching interface for foreign languages."
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
pact_matching = { version = "0.9", path = "../pact_matching" }
pact_models = { version = "0.0", path = "../pact_models" }
anyhow = "1.0.28"
libc = "0.2.69"
zeroize = "1.1.0"
thiserror = "1.0.15"
fern = "0.6.0"
log = "0.4.8"
serde_json = "1.0.51"
bytes = "1.0.1"
lazy_static = "1.4.0"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[build-dependencies]
os_info = { version = "3.0", default-features = false }
