[package]
name = "pact_mock_server"
version = "1.2.1"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Pact-Rust support library that implements in process mock server"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_mock_server"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
anyhow = "1.0.70"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
pact_matching = { version =  "~1.1.3", path = "../pact_matching" }
pact_models = "~1.1.8"
maplit = "1.0.2"
lazy_static = "1.4.0"
uuid = { version = "1.3.0", features = ["v4"] }
itertools = "0.10.5"
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.28"
hyper = { version = "0.14.25", features = ["full"] }
bytes = "1.4.0"
hyper-rustls = "0.24.0"
rustls = "0.21.0"
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.2"
thiserror = "1.0.40"
pact-plugin-driver = "~0.4.5"
tracing = "0.1.37" # This needs to be the same version across all the libs (i.e. plugin driver)
tracing-core = "0.1.30"  # This needs to be the same version across all the pact libs (i.e. pact ffi)
url = "2.3.1"

[dev-dependencies]
quickcheck = "1.0.3"
expectest = "0.12.0"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
env_logger = "0.10.0"
test-log = "0.2.12"
test-env-log = "0.2.8"
tracing-subscriber = "0.3.17"
