[package]
name = "pact_mock_server"
version = "1.2.4"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Pact-Rust support library that implements in process mock server"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_mock_server"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart", "tls"]
datetime = ["pact_models/datetime", "pact-plugin-driver?/datetime", "pact_matching/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact-plugin-driver?/xml", "pact_matching/xml"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver", "pact_matching/plugins"]
multipart = ["pact_matching/multipart"] # suport for MIME multipart bodies
tls = ["dep:hyper-rustls", "dep:rustls", "dep:rustls-pemfile", "dep:tokio-rustls"]

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
futures = "0.3.28"
hyper = { version = "0.14.25", features = ["full"] }
hyper-rustls = { version = "0.24.0", optional = true }
itertools = "0.10.5"
lazy_static = "1.4.0"
maplit = "1.0.2"
pact_matching = { version =  "~1.1.8", path = "../pact_matching", default-features = false }
pact_models = { version = "~1.1.17", default-features = false }
pact-plugin-driver = { version = "~0.5.0", optional = true, default-features = false }
rustls = { version = "0.21.0", optional = true }
rustls-pemfile = { version = "1.0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tokio-rustls = { version = "0.24.0", optional = true }
tracing = "0.1.37" # This needs to be the same version across all the libs (i.e. plugin driver)
tracing-core = "0.1.30"  # This needs to be the same version across all the pact libs (i.e. pact ffi)
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
quickcheck = "1.0.3"
expectest = "0.12.0"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
env_logger = "0.10.0"
test-log = "0.2.12"
test-env-log = "0.2.8"
tracing-subscriber = "0.3.17"
