[package]
name = "pact_mock_server_cli"
version = "1.0.5"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Standalone pact mock server for consumer pact tests"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_mock_server_cli"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart", "tls"]
datetime = ["pact_models/datetime", "pact_matching/datetime", "pact_mock_server/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact_matching/xml", "pact_mock_server/xml"] # support for matching XML documents
plugins = ["pact_matching/plugins", "pact_mock_server/plugins"]
multipart = ["pact_matching/multipart", "pact_mock_server/multipart"] # suport for MIME multipart bodies
tls = ["pact_mock_server/tls"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "~4.4.11", features = ["cargo"] }
futures = "0.3.29"
http = "0.2.9"
hyper = "0.14.28"
maplit = "1.0.2"
itertools = "0.12.0"
log = "0.4.20"
lazy_static = "1.4.0"
pact_matching = { version = "~1.1.10", path = "../pact_matching", default-features = false }
pact_mock_server = { version = "~1.2.4", path = "../pact_mock_server", default-features = false }
pact_models = { version = "~1.1.18", path = "../pact_models", default-features = false }
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time", "tracing-log"] }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
webmachine-rust = "0.3.0"

[dev-dependencies]
quickcheck = "1"
expectest = "0.12.0"
trycmd = "0.14.19"
test-log = "0.2.14"
env_logger = "0.10.1"
