[package]
name = "pact_mock_server_ffi"
version = "0.0.1"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
edition = "2018"
description = "Pact mock server interface for foreign languages"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_mock_server_ffi"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
pact_matching = "0.5.10"
pact_mock_server = "0.7.0"
libc = "0.2.69"
serde_json = "1.0"
env_logger = "0.7.1"
log = "0.4.8"
lazy_static = "1.4.0"

[dev-dependencies]
expectest = "0.12.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.14.1"
