[package]
name = "pact_mock_server_ffi"
version = "0.0.2"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
edition = "2018"
description = "Pact mock server interface for foreign languages"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_mock_server_ffi"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
pact_matching = { version = "0.5.11", path = "../pact_matching" }
pact_mock_server = { version = "0.7.1", path = "../pact_mock_server" }
libc = "0.2.69"
serde_json = "1.0"
env_logger = "0.7.1"
log = "0.4.8"
lazy_static = "1.4.0"
maplit = "1.0.2"
uuid = { version = "0.8", features = ["v4"] }
nom = "^4.0"
chrono = "0.4"
chrono-tz = "0.4"
rand_regex = "0.12.0"
regex-syntax = "0.6.4"
onig = "4.3.3"
rand = "0.6"

[dev-dependencies]
expectest = "0.12.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.14.1"
