[package]
name = "pact_mock_server_ffi"
version = "0.0.14"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
edition = "2018"
description = "Pact mock server interface for foreign languages"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_mock_server_ffi"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
pact_matching = { version = "0.8.6", path = "../pact_matching" }
pact_mock_server = { version = "0.7.12", path = "../pact_mock_server" }
libc = "0.2.69"
serde_json = "1.0"
env_logger = "0.7.1"
log = "0.4.8"
lazy_static = "1.4.0"
maplit = "1.0.2"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
chrono-tz = "0.4"
rand_regex = "0.12.0"
regex-syntax = "0.6.4"
onig = { version = "6.1.0", default-features = false }
rand = "0.6"
itertools = "0.9.0"
multipart = { version = "0.17", default-features = false, features = ["client", "mock"] }

[dev-dependencies]
expectest = "0.12.0"
reqwest = { version = "0.11", features = ["blocking"] }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.14.1"
