[package]
name = "pact_models"
version = "1.1.18"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Pact-Rust support library that provides the core models for dealing with Pact files"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_models"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]
build = "build.rs"

[features]
default = ["datetime", "xml"]
datetime = ["dep:chrono", "dep:chrono-tz", "dep:gregorian"] # Support for date/time matchers and expressions
xml = ["dep:sxd-document"] # support for matching XML documents

[dependencies]
ariadne = "0.3.0"
anyhow = "1.0.71"
base64 = "0.21.2"
bytes = { version = "1.4.0", features = ["serde"] }
chrono = { version = "0.4.22", features = ["std", "clock"], default-features = false, optional = true }
chrono-tz = { version = "0.8.0", optional = true }
gregorian = { version = "0.2.4", optional = true }
hashers = "1.0.1"
hex = "0.4.3"
indextree = "4.6.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
lenient_semver = "0.4.2"
logos = "0.13.0"
maplit = "1.0.2"
mime = "0.3.17"
nom = "7.1.3"
rand = "0.8.5"
rand_regex = "0.15.1"
regex = "1.8.4"
regex-syntax = "0.6.27"
semver = "1.0.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sxd-document = { version = "0.3.2", optional = true }
tracing = "0.1.37" # This needs to be the same version across all the libs (i.e. Pact FFI and plugin driver)

[target.'cfg(not(target_family = "wasm"))'.dependencies]
fs2 = "0.4.3"
onig = { version = "6.4.0", default-features = false }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
uuid = { version = "1.3.3", features = ["v4"] }

[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1.3.3", features = ["v4"] }

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.10.0"
hamcrest2 = "0.3.0"
pretty_assertions = "1.3.0"
rstest = "0.17.0"
speculate = "0.1.2"
test-log = { version = "0.2.11", features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log", "fmt"] }
trim-margin = "0.1.0"

[build-dependencies]
parse-zoneinfo = "0.3.0"
maplit = "1.0.2"
