[package]
name = "pact_verifier"
version = "1.0.3"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Pact-Rust support library that implements provider verification functions"
documentation = "https://docs.rs/pact_verifier/"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_verifier"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart"]
datetime = ["pact_models/datetime", "pact-plugin-driver?/datetime", "pact_matching/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact-plugin-driver?/xml", "pact_matching/xml"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver"]
multipart = ["pact_matching/multipart"] # suport for MIME multipart bodies

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.66"
async-trait = "0.1.58"
base64 = "0.21.0"
bytes = "1.2.1"
difference = "2.0.0"
futures = "0.3.25"
http = "0.2.8"
humantime = "2.1.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
maplit = "1.0.2"
mime = "0.3.16"
pact_matching = { version = "~1.1.4", path = "../pact_matching", default-features = false }
pact_models = { version = "~1.1.10", default-features = false }
pact-plugin-driver = { version = "~0.4.5", optional = true, default-features = false }
regex = "1.7.0"
serde = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37" # This needs to be the same version across all the libs (i.e. plugin driver and pact ffi)
tracing-core = "0.1.30"  # This needs to be the same version across all the pact libs (i.e. plugin driver and pact ffi)
url = "2.3.1"
urlencoding = "2.1.2"

[dependencies.reqwest]
version = "0.11.12"
default-features = false
features = ["rustls-tls-native-roots", "blocking", "json"]

[dependencies.serde_with]
version = "2.0.1"
features = ["json"]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
quickcheck = "1.0.3"
expectest = "0.12.0"
env_logger = "0.10.0"
pact_consumer = { version = "~1.0.0", path = "../pact_consumer" }
test-log = { version = "0.2.11", features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log", "fmt"] }
chrono = "0.4.24"
chrono-tz = "0.8.1"
pretty_assertions = "1.3.0"
