[package]
name = "pact_verifier"
version = "1.0.6"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Pact-Rust support library that implements provider verification functions"
documentation = "https://docs.rs/pact_verifier/"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_verifier"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart"]
datetime = ["pact_models/datetime", "pact-plugin-driver?/datetime", "pact_matching/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact-plugin-driver?/xml", "pact_matching/xml"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver"]
multipart = ["pact_matching/multipart"] # suport for MIME multipart bodies

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.75"
async-trait = "0.1.74"
base64 = "0.21.5"
bytes = "1.5.0"
difference = "2.0.0"
futures = "0.3.29"
http = "0.2.11"
humantime = "2.1.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
mime = "0.3.17"
pact_matching = { version = "~1.1.9", path = "../pact_matching", default-features = false }
pact_models = { version = "~1.1.17", path = "../pact_models", default-features = false }
pact-plugin-driver = { version = "~0.5.1", optional = true, default-features = false }
regex = "1.10.2"
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
url = "2.5.0"
urlencoding = "2.1.3"

[dependencies.reqwest]
version = "0.11.23"
default-features = false
features = ["rustls-tls-native-roots", "blocking", "json"]

[dependencies.serde_with]
version = "3.4.0"
features = ["json"]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
quickcheck = "1.0.3"
expectest = "0.12.0"
env_logger = "0.10.1"
pact_consumer = { version = "~1.1.1", path = "../pact_consumer" }
test-log = { version = "0.2.14", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log", "fmt"] }
chrono = "0.4.31"
chrono-tz = "0.8.4"
pretty_assertions = "1.4.0"
