[package]
name = "pact_verifier_cli"
version = "0.10.5"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Standalone pact verifier for provider pact verification"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_verifier_cli"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
pact_models = "1.0.9"
pact_verifier = { version = "0.15.2", path = "../pact_verifier" }
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
clap = { version = "4.2.1", features = ["cargo", "env"] }
regex = "1.7.3"
log = "0.4.17"
serde_json = "1.0.95"
anyhow = "1.0.70"
ansi_term = "0.12.1"
maplit = "1.0.2"
tracing = "0.1.37"
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log"] }
tracing-log = "0.1.3"
env_logger = "0.10.0"
junit-report = "0.8.2"
time = "0.3.20"

[dev-dependencies]
expectest = "0.12.0"
trycmd = "0.14.13"
